<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".temperature.TemperatureActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorActionBar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bt_toolbar_back"
                android:layout_width="9dp"
                android:layout_height="18dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/common_backspace_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_temperature_title"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/tv_current_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="94dp"
        android:text="@string/str_temperature_current_temperature"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_toolbar" />

    <ImageView
        android:id="@+id/iv_temperature_bg"
        android:layout_width="266dp"
        android:layout_height="301dp"
        android:layout_marginTop="46dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_temperature"
        app:srcCompat="@drawable/temperature_cold" />

    <TextView
        android:id="@+id/tv_temperature_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/str_main_default_temperature"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_temperature_bg"
        app:layout_constraintEnd_toEndOf="@+id/iv_temperature_bg"
        app:layout_constraintStart_toStartOf="@+id/iv_temperature_bg" />

    <TextView
        android:id="@+id/tv_current_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_temperature_current_humidity"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/iv_temperature_bg"
        app:layout_constraintTop_toBottomOf="@+id/iv_temperature_bg" />


    <TextView
        android:id="@+id/tv_current_humidity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:text="100"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_end_point"
        app:layout_constraintBottom_toBottomOf="@+id/tv_end_point" />

    <TextView
        android:id="@+id/tv_end_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_temperature_end_point"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_temperature_bg"
        app:layout_constraintTop_toBottomOf="@+id/iv_temperature_bg" />

</androidx.constraintlayout.widget.ConstraintLayout>