<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".gas.GasActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorActionBar"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:contentInsetLeft="0dp"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/bt_toolbar_back"
                android:layout_width="9dp"
                android:layout_height="18dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/common_backspace_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_gas_title"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/iv_gas_bg"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_toolbar"
        app:srcCompat="@drawable/gas_bg" />

<!--    NO2-->
    <TextView
        android:id="@+id/tv_no2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_gas_no2"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="@+id/iv_gas_bg"
        app:layout_constraintTop_toBottomOf="@+id/iv_gas_bg" />

    <TextView
        android:id="@+id/tv_no2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:text="0"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_no2_ppm"
        app:layout_constraintEnd_toStartOf="@+id/tv_no2_ppm"
        app:layout_constraintTop_toBottomOf="@+id/iv_gas_bg" />

    <TextView
        android:id="@+id/tv_no2_ppm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/str_gas_ppm"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_gas_bg"
        app:layout_constraintTop_toBottomOf="@+id/iv_gas_bg" />

<!--    CO2-->
    <TextView
        android:id="@+id/tv_co_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_gas_co"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/iv_gas_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_no2_title" />

    <TextView
        android:id="@+id/tv_co_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="25sp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_co_ppm"
        app:layout_constraintBottom_toBottomOf="@+id/tv_co_ppm"/>

    <TextView
        android:id="@+id/tv_co_ppm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_gas_ppm"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_gas_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_no2_ppm" />

<!--    NH3-->
    <TextView
        android:id="@+id/tv_nh3_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_gas_nh3"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/iv_gas_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_co_title" />

    <TextView
        android:id="@+id/tv_nh3_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="25sp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_nh3_ppm"
        app:layout_constraintBottom_toBottomOf="@+id/tv_nh3_ppm"/>

    <TextView
        android:id="@+id/tv_nh3_ppm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_gas_ppm"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_gas_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_co_ppm" />

<!--    CO2 -->
    <TextView
        android:id="@+id/tv_co2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_gas_co2"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/iv_gas_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_nh3_title" />

    <TextView
        android:id="@+id/tv_co2_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="25sp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_co2_ppm"
        app:layout_constraintBottom_toBottomOf="@+id/tv_co2_ppm"/>

    <TextView
        android:id="@+id/tv_co2_ppm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_gas_ppm"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_gas_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_nh3_ppm" />

<!--    CH4-->
    <TextView
        android:id="@+id/tv_ch4_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_gas_ch4"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/iv_gas_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_co2_title" />

    <TextView
        android:id="@+id/tv_ch4_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="25sp"
        android:layout_marginRight="20dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_ch4_ppm"
        app:layout_constraintBottom_toBottomOf="@+id/tv_ch4_ppm"/>

    <TextView
        android:id="@+id/tv_ch4_ppm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_gas_ppm"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_gas_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_co2_ppm" />

<!--    human-->
    <TextView
        android:id="@+id/tv_human_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_gas_human"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/iv_gas_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_ch4_title" />

    <TextView
        android:id="@+id/tv_human_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_ch4_text"
        app:layout_constraintBottom_toBottomOf="@+id/tv_human_ppm"/>

    <TextView
        android:id="@+id/tv_human_ppm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_gas_people"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="@+id/iv_gas_bg"
        app:layout_constraintTop_toBottomOf="@+id/tv_ch4_ppm" />
</androidx.constraintlayout.widget.ConstraintLayout>